force-app/main/default/objects/Competitor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Entries</relationshipLabel>
    <relationshipName>Competitor_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Outlet where competitor activity was observed</description>
</CustomField>