force-app/main/default/objects/Competitor__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>Activity Date</label>
    <type>Date</type>
    <description>Date when competitor activity was observed</description>
</CustomField>