force-app/main/default/objects/Competitor__c/fields/Competitor_Company__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Company__c</fullName>
    <label>Competitor Company</label>
    <type>Text</type>
    <length>255</length>
</CustomField>