force-app/main/default/objects/Competitor__c/fields/Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price__c</fullName>
    <label>Competitor Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>