force-app/main/default/objects/Competitor__c/fields/Competitor_SKU__c.field-meta.xml
<CustomField>
    <fullName>Competitor_SKU__c</fullName>
    <label>Competitor SKU</label>
    <type>Text</type>
    <length>100</length>
</CustomField>