force-app/main/default/objects/Competitor__c/fields/Own_Product__c.field-meta.xml
<CustomField>
    <fullName>Own_Product__c</fullName>
    <label>Own Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Competitor Mappings</relationshipLabel>
    <relationshipName>Competitor_Mappings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>