force-app/main/default/objects/Competitor__c/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <label>Photo URL</label>
    <type>Url</type>
    <description>URL to competitor product photo captured during visit</description>
</CustomField>