force-app/main/default/objects/Competitor__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Lookup</type>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>