force-app/main/default/objects/Competitor__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <type>Lookup</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Competitor Entries</relationshipLabel>
    <relationshipName>Competitor_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Visit during which this competitor entry was captured</description>
</CustomField>