force-app/main/default/objects/Competitor__c/listViews/Active_Competitors.listView-meta.xml
<ListView>
    <fullName>Active_Competitors</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Company__c</columns>
    <columns>Competitor_SKU__c</columns>
    <columns>Competitor_Price__c</columns>
    <columns>Own_Product__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Competitors</label>
</ListView>