force-app/main/default/objects/Competitor__c/listViews/All_Competitor_Entries.listView-meta.xml
<ListView>
    <fullName>All_Competitor_Entries</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Company__c</columns>
    <columns>Competitor_SKU__c</columns>
    <columns>Competitor_Price__c</columns>
    <columns>Own_Product_Ext__c</columns>
    <columns>Account__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Competitor Entries</label>
</ListView>